Fix layout issues, add contact form, use mysql to register signup

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -31,9 +31,6 @@ $navbar-inverse-link-active-bg: #1D2123;
 @import 'font-awesome/scss/font-awesome';
 @import 'fullpage.js/jquery.fullPage';
 
-.glyphicon.glyphicon-xl { font-size: 3em; }
-.glyphicon-apple { &:before { content: "\f8ff"; } }
-
 .browsehappy {
     margin: 0.2em 0;
     background: #ccc;
@@ -41,36 +38,46 @@ $navbar-inverse-link-active-bg: #1D2123;
     padding: 0.2em 0;
 }
 
-/* Custom CSS
- * --------------------------------------- */
-
-// h1{
-//     font-size: 2em;
-//     color: $pinpo-green;
-//     // rgb(64, 255, 111);
-// }
+:focus {outline:none;}
+::-moz-focus-inner {border:0;}
 
 /* Bootstrap overrides
  * --------------------------------------- */
-.navbar-inverse {
-    font-size: 20px;
-    font-weight: 300;
-    text-transform: uppercase;
-}
-@media (min-width: 768px){
-    .navbar-nav{
-        float:none;
-        margin: 0 auto;
-        display: table;
-        table-layout: fixed;
-    }
-}
 
-.navbar-nav {
-  > li > a {
-    padding-left:   30px;
-    padding-right:  30px;
-  }
+.navbar {
+    &.navbar-inverse {
+        font-size: 20px;
+        font-weight: 300;
+        text-transform: uppercase;
+    }
+
+    .navbar-nav {
+        > li > a {
+            padding-left:   30px;
+            padding-right:  30px;
+        }
+
+        @media (min-width: 768px) {
+            & {
+                float:none;
+                margin: 0 auto;
+                display: table;
+                table-layout: fixed;
+            }
+        }
+    }
+
+    .navbar-brand {
+        position: absolute;
+        left: 70px;
+        padding: 12px;
+    }
+
+    .navbar-contact {
+        position: absolute;
+        right: 70px;
+        top: 0;
+    }
 }
 
 .fp-controlArrow{
@@ -99,12 +106,6 @@ header.section, footer.section {
     @extend .section.section-inverse;
 }
 
-.navbar-brand {
-    position: absolute;
-    left: 70px;
-    padding: 12px;
-}
-
 h1#PINPO {
 
     font-size: 120px;
@@ -121,26 +122,43 @@ h1#PINPO {
     }
 }
 
+@mixin linear-border-image($color) {
+    -webkit-border-image: -webkit-gradient(linear, 100% 0, 0 0, from($color), to(rgba(51, 255, 102,0))) 100% 1;
+    -webkit-border-image: -webkit-linear-gradient(right, $color, rgba(51, 255, 102,0)) 100% 1;
+    -moz-border-image: -moz-linear-gradient(right, $color, rgba(51, 255, 102,0)) 100% 1;
+    -o-border-image: -o-linear-gradient(right, $color, rgba(51, 255, 102,0)) 100% 1;
+    border-image: linear-gradient(to right, $color, rgba(51, 255, 102,0)) 100% 1;
+}
+
 h2.titreslide {
-   border-bottom:dotted;
-   margin-bottom: 40px;
+    // border-color: linear-gradient(90deg, #ababab, #0000ff 33px);
+    border-bottom:3px solid #eee;;
+    margin-bottom: 40px;
+    // border-style: solid;
+    @include linear-border-image($pinpo-green);
+    // padding-bottom: 5px;
+
+    // border-width: 0 0 3px 0;
+    // border-image: linear-gradient(to top, black, rgba(0, 0, 0, 0)) 100% 1;
+    // -webkit-border-image: -webkit-gradient(linear, 100% 0, 0 0, from(black), to(rgba(0, 0, 0, 0))) 100% 1;
+    // -webkit-border-image: -webkit-linear-gradient(top, black, rgba(0, 0, 0, 0)) 100% 1;
+    // -o-border-image: -o-linear-gradient(top, black, rgba(0, 0, 0, 0)) 100% 1;
+    // -moz-border-image: -moz-linear-gradient(top, black, rgba(0, 0, 0, 0)) 100% 1;
+
 }
 
 .feature {
     font-weight: 300;
     padding: 90px;
 
-    &.feature-img img {
-        margin: 20px;
+    &.feature-img {
+        img { margin: 20px; }
     }
 
     &.feature-description {
-
         margin-top: 50px;
-
-        img {
-            cursor: pointer;
-        }
+        p { margin-bottom: 30px; }
+        img { cursor: pointer; }
     }
 }
 
